# xiqu-script-site

./: .gitignore  License  README.md  bun.lockb  package.json  renovate.json  rspress.config.ts  tailwind.config.ts  tsconfig.json
docs/: _meta.json  _nav.json  index.md  thanks.mdx
docs/jingju/: _meta.json
docs/jingju/scripts/: 1-qupaichangqiang.mdx  10-qingguance.mdx  11-hanyangyuanchangbanpohanjingkou.mdx  12-zhuofangcao.mdx  13-quxingyang.mdx  14-lit.fairiesscatterflowers.mdx  15-battleofWanCheng.mdx  16-wuzixu.mdx  2-inextremelygoodfortune.mdx  3-lostofJie-TingpassuseofemptycityexecutionofMaSu.mdx  4-shangtiantai.mdx  5-xianglianpa.mdx  6-wupenji.mdx  7-substitutingaraccoonforthecrownprince.mdx  8-revivetheTangDynastyandDestroyHuangChao.mdx  9-silangvisitshismother.mdx  _meta.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DependenciesList.tsx  dependencies-licenses.json
src/components/DependenciesList/: dependencies-licenses.json  index.tsx
src/components/LinkCard/: index.module.css  index.tsx
styles/: index.css
