[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.2", features = [] }
tauri-plugin-log = "2.2.0"
tauri-plugin-notification = { version = "2.2.0", features = [ "windows7-compat" ] }

[profile.dev]
opt-level = 1               # Use slightly better optimizations.
lto = "thin"                # Performs "thin" LTO. It takes substantially less time to run while still achieving performance gains similar to "fat".

[profile.release]
panic = "abort"             # Strip expensive panic clean-up logic
codegen-units = 1           # Compile crates one after another so the compiler can optimize better
lto = true                  # Enables link to optimizations
opt-level = "s"             # Optimize for binary size
strip = true                # Automatically strip symbols from the binary.
